// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callout component renders a message 1`] = `
<div
  className="callout callout"
>
  <h1 />
  <h5>
    This is a message
  </h5>
</div>
`;

exports[`callout component renders a title 1`] = `
<div
  className="callout callout"
>
  <h1>
    This is a title
  </h1>
  <h5 />
</div>
`;

exports[`callout component renders one button 1`] = `
<div
  className="callout callout"
>
  <h1 />
  <h5 />
  <div
    className="buttons"
  >
    <button
      className="primary responsive"
    >
      Single Button
    </button>
  </div>
</div>
`;

exports[`callout component renders two buttons 1`] = `
<div
  className="callout callout"
>
  <h1 />
  <h5 />
  <div
    className="buttons"
  >
    <button
      className="primary responsive"
    >
      First Button
    </button>
    <button
      className="responsive secondary"
    >
      Second Button
    </button>
  </div>
</div>
`;
